--- a/resources/views/adm/flag/show.twig
+++ b/resources/views/adm/flag/show.twig
@@ -4,6 +4,32 @@
 {% block container %}
   {% include 'adm.flag._post' %}
 
+  <h4 class="mb-3">Historia</h4>
+  <div class="mb-4">
+    {% for report in reports %}
+      <div class="d-flex mb-2">
+        <i class="fas fa-flag mt-1 mr-2"></i>
+        <div>
+           {{ report.reporterMention }}
+          zgłosił
+
+          <span class="badge badge-secondary">
+            <i class="fa fa-flag"></i>
+            <b>{{ report.reportType }}</b>
+          </span>
+
+          {% if report.reportNote %}
+            z dopiskiem <code>{{ report.reportNote }}</code>.
+          {% else %}
+            bez dopisku.
+          {% endif %}
+
+          <small class="d-block text-muted"> {{ report.reportedAt }}</small>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+
   <div>
     <a href="{{ backUrl }}" class="btn btn-secondary">
       Powrót
