Reorder elements to emphasise reports instead of the post content

--- a/resources/sass/pages/adm.scss
+++ b/resources/sass/pages/adm.scss
@@ -49,8 +49,8 @@ body.theme-dark .post-preview {
 .post-preview {
   background-color: #eee;
   border: 1px solid #ccc;
-  padding: .5rem;
-  border-radius: .25rem;
+  padding: .5em;
+  border-radius: .25em;
 }
 
 .post-preview p {
