--- a/resources/views/adm/flag/_post.twig
+++ b/resources/views/adm/flag/_post.twig
@@ -3,9 +3,11 @@
     <div class="d-flex justify-content-between">
       <div>
         <p class="mb-0 text-right">
-          <a href="{{ post.url }}">Sprawa #{{ post.id }}</a>
+          <a href="{{ post.url }}">
+            Zgłoszenie #{{ post.id }}
+          </a>
           <span class="badge badge-primary ml-1">
-            Nowa
+            Nowe
           </span>
         </p>
       </div>
@@ -19,19 +21,23 @@
   </div>
   <div class="list-group list-group-flush">
     <div class="list-group-item">
-      {% for type in post.reportTypes %}
-        <span class="mr-2">
-          <i class="far fa-flag fa-fw"></i>
-          {{ type }}
-        </span>
-      {% endfor %}
-    </div>
-    <div class="list-group-item">
-      <i class="far fa-user fa-fw"></i>
-      Zgłaszający:
-      {% for reporterMention in post.reporterMentions %}
-        {{ reporterMention }}
-      {% endfor %}
+      <div class="d-flex justify-content-between">
+        <div>
+          <i class="far fa-user fa-fw"></i>
+          Zgłaszający:
+          {% for reporterMention in post.reporterMentions %}
+            {{ reporterMention }}
+          {% endfor %}
+        </div>
+        <div>
+          {% for type in post.reportTypes %}
+            <span class="mr-2">
+              <i class="far fa-flag fa-fw"></i>
+              {{ type }}
+            </span>
+          {% endfor %}
+        </div>
+      </div>
     </div>
     <div class="list-group-item">
       <div class="d-flex">
