--- a/resources/views/adm/flag/_post.twig
+++ b/resources/views/adm/flag/_post.twig
@@ -4,7 +4,7 @@
       <div>
         <p class="mb-0 text-right">
           <a href="{{ post.url }}">
-            Zgłoszenie #{{ post.id }}
+            Zgłoszony post #{{ post.id }}
           </a>
           <span class="badge badge-primary ml-1">
             Nowe
@@ -31,7 +31,7 @@
         </div>
         <div>
           {% for type in post.reportTypes %}
-            <span class="mr-2">
+            <span class="ml-2">
               <i class="far fa-flag fa-fw"></i>
               {{ type }}
             </span>
@@ -44,16 +44,14 @@
         <i class="fas fa-user-edit fa-fw"></i>
         <div class="ml-1" style="font-size:0.75em;">
           <div>
-            {{ post.authorMention }} napisał(a) w: <a href="{{ post.forumUrl }}">{{ post.forumSlug }}</a>:
+            {{ post.authorMention }} napisał(a) w <a href="{{ post.forumUrl }}">{{ post.forumSlug }}</a>,
+            <small class="text-muted" title="Post napisany: {{ post.createdAt }}">
+              {{ post.createdAgo }}
+            </small>
           </div>
-          <div>
-            <div class="d-inline-block post-preview" style="margin: 0.15rem 0;">
-              {{ post.preview }}
-            </div>
+          <div class="d-inline-block post-preview" style="margin: 0.15rem 0;">
+            {{ post.preview }}
           </div>
-          <small class="text-muted" title="Post napisany: {{ post.createdAt }}">
-            {{ post.createdAgo }}
-          </small>
         </div>
       </div>
     </div>
