make breadcrumb `sticky`

--- a/resources/sass/core/_breadcrumbs.scss
+++ b/resources/sass/core/_breadcrumbs.scss
@@ -17,7 +17,7 @@
 }
 
 #breadcrumb-fixed {
-  position: fixed;
+  position: sticky;
   opacity: 0.9;
   box-shadow: 0 2px 4px rgba(220, 218, 216, 0.75);
   background: $gray-lighter;
